# ONSdigital.sic-classification-utils

./: pyproject.toml
src/industrial_classification_utils/llm/: llm.py
